# character-ani

./: .gitignore  CMakeLists.txt  README.md  build.ps1
includes/learnopengl/: animation.h  animator.h  root_directory.h
resources/test/: Jump.fbx  Running.fbx  Taunt.fbx  Walking.fbx
src/8.guest/2020/skeletal_animation/: anim_model.fs  anim_model.vs  skeletal_animation.cpp  skybox.fs  skybox.vs
